--- a/web/src/components/loading-icon.astro
+++ b/web/src/components/loading-icon.astro
@@ -1,9 +1,9 @@
 ---
-import type { HTMLAttributes } from "astro/types";
+import type { HTMLAttributes } from "astro/types"
 
 interface Props extends HTMLAttributes<"svg"> {}
 
-const props = Astro.props;
+const props = Astro.props
 ---
 
 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#000000" viewBox="0 0 256 256" {...props}
